--- a/src/styles.css
+++ b/src/styles.css
@@ -67,3 +67,9 @@ th {
     position: relative;
     
 }
+
+.authFormTitle{padding: 10px 10px;
+  font-size: 30px;
+  text-align: center;
+  font-weight: bold;
+}
